--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>core</module>
         <module>common-jpa</module>
+        <module>mail</module>
     </modules>
 
     <properties>
