--- a/core/pom.xml
+++ b/core/pom.xml
@@ -52,6 +52,12 @@
             <version>1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.5.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
