--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 server.servlet.context-path=/api
+# Database config
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# jwt config
 jwtSecret=${SECRET}
+# email config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${EMAIL_USER}
