--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -9,9 +9,11 @@ spring.jpa.hibernate.ddl-auto=update
 # jwt config
 jwtSecret=${SECRET}
 # email config
+# email config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${EMAIL_USER}
 spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.defaultEncoding=UTF-8
