--- a/core/pom.xml
+++ b/core/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>mail</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ru.ncti.modulebackend</groupId>
+            <artifactId>rabbitmq</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.modelmapper</groupId>
