--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>7.11.4</version>
+        </dependency>
+
     </dependencies>
 
 </project>
