--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -22,7 +22,5 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=password
 # flyway - test data
-spring.flyway.url=jdbc:mysql://localhost:3306/mydb
-spring.flyway.user=root
-spring.flyway.password=root
+spring.flyway.baselineOnMigrate=true
 spring.flyway.locations=classpath:db/migration
