--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 # jwt config
 jwtSecret=${SECRET}
-# email config
+# gmail config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${EMAIL_USER}
@@ -19,8 +19,8 @@ spring.mail.defaultEncoding=UTF-8
 # rabbitmq
 spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=user
-spring.rabbitmq.password=password
-# flyway - test data
+spring.rabbitmq.username=${RABBITMQ_USER}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+# flyway - migration database
 spring.flyway.baselineOnMigrate=true
 spring.flyway.locations=classpath:db/migration
