--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -4,8 +4,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.jpa.show-sql=true
+# JPA
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 # jwt config
 jwtSecret=${SECRET}
 # gmail config
