--- a/core/pom.xml
+++ b/core/pom.xml
@@ -44,6 +44,18 @@
         </dependency>
 
         <dependency>
+            <groupId>ru.ncti</groupId>
+            <artifactId>chat</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>ru.ncti</groupId>
+                    <artifactId>common-jpa</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
