--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>common-jpa</module>
         <module>mail</module>
         <module>rabbitmq</module>
+        <module>chat</module>
     </modules>
 
     <properties>
